--- a/projects.html
+++ b/projects.html
@@ -346,34 +346,61 @@
       </div>
       <div class="mt-6 grid lg:grid-cols-3 gap-6">
         <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Deployment" src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1200&auto=format&fit=crop"/>
+          <img class="rounded-xl mb-4" alt="Deployment" src="/assets/images/deployment.png"/>
           <h3 class="text-xl font-bold">MDT/WDS Server Setup & Deployment</h3>
           <p class="mt-2 text-gray-700 dark:text-gray-300">Imaging automation across 4 global offices for 500+ users; ~2h → 20m per device.</p>
-          <ul class="mt-3 text-sm list-disc pl-5 text-gray-700 dark:text-gray-300">
-            <li>MDT/WDS on Server 2012 R2</li>
-            <li>DFS replication for shares</li>
-            <li>PXE boot per-site gateways</li>
-          </ul>
+          <div class="mt-3 text-sm text-gray-700 dark:text-gray-300 prose">
+            <h4 class="font-semibold">MDT/WDS Server Setup and Deployment</h4>
+            <p><strong>Date Completed:</strong> Nov 2016 – Dec 2016</p>
+            <p><strong>Objective:</strong> Automate workstation imaging and deployment across global offices.</p>
+            <p><strong>Outcome &amp; Impact:</strong> Reduced imaging time from ~2 hours to 20 minutes per device. Enabled standardized deployments for 500+ users across 4 sites.</p>
+            <p><strong>Technical Steps Taken:</strong></p>
+            <ul class="list-disc pl-5">
+              <li>Installed WDS and MDT on Windows Server 2012 R2.</li>
+              <li>Built deployment task sequences for OS and applications.</li>
+              <li>Configured DFS replication to sync deployment shares across four offices.</li>
+              <li>Implemented PXE boot rules at each gateway for localized booting.</li>
+              <li>Validated process with IT teams and created documentation.</li>
+            </ul>
+          </div>
         </article>
         <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Cloud email" src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=1200&auto=format&fit=crop"/>
+          <img class="rounded-xl mb-4" alt="Office 365" src="/assets/images/o365.png"/>
           <h3 class="text-xl font-bold">Office 365 Migrations (30 orgs)</h3>
           <p class="mt-2 text-gray-700 dark:text-gray-300">Hybrid migration playbooks, mailbox moves, DNS cutovers, and staff enablement.</p>
-          <ul class="mt-3 text-sm list-disc pl-5 text-gray-700 dark:text-gray-300">
-            <li>Assessment & wave planning</li>
-            <li>Hybrid Exchange where needed</li>
-            <li>3-day typical migration window</li>
-          </ul>
+          <div class="mt-3 text-sm text-gray-700 dark:text-gray-300 prose">
+            <h4 class="font-semibold">Office 365 Migrations (30 orgs)</h4>
+            <p><strong>Date Completed:</strong> Mar 2013 – Sep 2013</p>
+            <p><strong>Objective:</strong> Transition nonprofits from on-prem Exchange servers to Office 365.</p>
+            <p><strong>Outcome &amp; Impact:</strong> Migrated 30+ organizations successfully, improving uptime and eliminating server maintenance overhead.</p>
+            <p><strong>Technical Steps Taken:</strong></p>
+            <ul class="list-disc pl-5">
+              <li>Evaluated Exchange environments and mail server sizes.</li>
+              <li>Created migration playbooks for each organization.</li>
+              <li>Configured hybrid Exchange where required.</li>
+              <li>Migrated mailboxes in staged waves.</li>
+              <li>Updated DNS records and trained users.</li>
+            </ul>
+          </div>
         </article>
         <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Server room" src="https://images.unsplash.com/photo-1516245834210-c4c142787335?q=80&w=1200&auto=format&fit=crop"/>
+          <img class="rounded-xl mb-4" alt="Server room" src="/assets/images/apple.png"/>
           <h3 class="text-xl font-bold">macOS Server (Open Directory)</h3>
           <p class="mt-2 text-gray-700 dark:text-gray-300">Central auth + file sharing for 1,000+ users in education environment.</p>
-          <ul class="mt-3 text-sm list-disc pl-5 text-gray-700 dark:text-gray-300">
-            <li>Open Directory</li>
-            <li>Permissioned file shares</li>
-            <li>App distribution</li>
-          </ul>
+          <div class="mt-3 text-sm text-gray-700 dark:text-gray-300 prose">
+            <h4 class="font-semibold">macOS Server (Open Directory)</h4>
+            <p><strong>Date Completed:</strong> Mar 2009 – Apr 2009</p>
+            <p><strong>Objective:</strong> Deploy centralized server for authentication and file sharing in a school environment.</p>
+            <p><strong>Outcome &amp; Impact:</strong> Supported 1,000+ student and staff logins with Open Directory and shared applications.</p>
+            <p><strong>Technical Steps Taken:</strong></p>
+            <ul class="list-disc pl-5">
+              <li>Installed macOS Server.</li>
+              <li>Configured Open Directory for centralized authentication.</li>
+              <li>Created and secured file shares with proper permissions.</li>
+              <li>Enabled app distribution across labs.</li>
+              <li>Tested load and trained administrators.</li>
+            </ul>
+          </div>
         </article>
       </div>
     </div>
