--- a/projects.html
+++ b/projects.html
@@ -598,7 +598,8 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center gap-3">
         <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-fuchsia-600 text-white font-bold">AI</span>
-        <h2 class="text-3xl font-extrabold">Conversational AI Bot Design</h2> GitHub Repository Here: <a class="text-blue-600 dark:text-blue-400 underline" href="https://github.com/cruizeone1/LivePersonGenAIBots" target="_blank" rel="noopener noreferrer">
+  <h2 class="text-3xl font-extrabold">Conversational AI Bot Design</h2>
+  <a class="text-blue-600 dark:text-blue-400 underline" href="https://github.com/cruizeone1/LivePersonGenAIBots" target="_blank" rel="noopener noreferrer">GitHub Repository Here</a>
       </div>
       <p class="mt-2 text-gray-700 dark:text-gray-300">Multichannel assistants with intent design, secure API integrations, escalation paths, and analytics. Each bot below includes objective, impact, and key technical steps.</p>
 
