--- a/projects.html
+++ b/projects.html
@@ -356,6 +356,7 @@
             <p><strong>Outcome &amp; Impact:</strong> Reduced imaging time from ~2 hours to 20 minutes per device. Enabled standardized deployments for 500+ users across 4 sites.</p>
             <p><strong>Technical Steps Taken:</strong></p>
             <ul class="list-disc pl-5">
+              </div>
               <li>Installed WDS and MDT on Windows Server 2012 R2.</li>
               <li>Built deployment task sequences for OS and applications.</li>
               <li>Configured DFS replication to sync deployment shares across four offices.</li>
@@ -374,6 +375,7 @@
             <p><strong>Objective:</strong> Transition nonprofits from on-prem Exchange servers to Office 365.</p>
             <p><strong>Outcome &amp; Impact:</strong> Migrated 30+ organizations successfully, improving uptime and eliminating server maintenance overhead.</p>
             <p><strong>Technical Steps Taken:</strong></p>
+            </div>
             <ul class="list-disc pl-5">
               <li>Evaluated Exchange environments and mail server sizes.</li>
               <li>Created migration playbooks for each organization.</li>
@@ -394,6 +396,7 @@
             <p><strong>Outcome &amp; Impact:</strong> Supported 1,000+ student and staff logins with Open Directory and shared applications.</p>
             <p><strong>Technical Steps Taken:</strong></p>
             <ul class="list-disc pl-5">
+              </div>
               <li>Installed macOS Server.</li>
               <li>Configured Open Directory for centralized authentication.</li>
               <li>Created and secured file shares with proper permissions.</li>
@@ -598,7 +601,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center gap-3">
         <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-fuchsia-600 text-white font-bold">AI</span>
-  <h2 class="text-3xl font-extrabold">Conversational AI Bot Design</h2>
+  <h2 class="text-3xl font-extrabold"> <a href="https://github.com/cruizeone1/LivePersonGenAIBots" target="_blank" rel="noopener noreferrer"></a> Conversational AI Bot Design</h2></a>
   <a class="text-blue-600 dark:text-blue-400 underline" href="https://github.com/cruizeone1/LivePersonGenAIBots" target="_blank" rel="noopener noreferrer">GitHub Repository Here</a>
       </div>
       <p class="mt-2 text-gray-700 dark:text-gray-300">Multichannel assistants with intent design, secure API integrations, escalation paths, and analytics. Each bot below includes objective, impact, and key technical steps.</p>
