--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,10 @@
       <div class="grid md:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">Unified Project Portfolio</h1>
-          <p class="mt-4 text-lg text-gray-600 dark:text-gray-300">A forward-looking repository of infrastructure builds, data & analytics, CRM engineering, conversational AI systems, and web content — curated from real deployments and consulting work.</p>
+          <p class="mt-4 text-lg text-gray-600 dark:text-gray-300">A forward-looking repository of infrastructure builds, data & analytics, CRM engineering, conversational AI systems, and web content all drawn directly from deployments and consulting work, I’ve personally delivered.</p>
+          <p> <br> <h2 class="text-3xl font-extrabold"><a class="text-inherit no-underline hover:underline" href="https://github.com/cruizeone1" target="_blank" rel="noopener noreferrer">-Click Here for Github Repo-</a></h2></p>  
+          
+
           <div class="mt-6 flex flex-wrap gap-3">
            
           </div>
@@ -68,8 +71,8 @@
             <ul class="mt-2 text-sm text-gray-600 dark:text-gray-300 list-disc pl-4">
               <li>500+ users standardized imaging</li>
               <li>30+ O365 org migrations</li>
-              <li>17 Pentaho analytics demos</li>
-              <li>10 production-grade bots</li>
+              <li>100+ Pentaho analytics demos</li>
+              <li>95+ production-grade bots</li>
             </ul>
           </div>
         </div>
@@ -83,7 +86,7 @@
       <div class="grid md:grid-cols-3 gap-8">
         <div class="md:col-span-2">
           <h2 class="text-2xl font-bold">Overview</h2>
-          <p class="mt-3 text-gray-600 dark:text-gray-300">This portfolio consolidates hands-on work across enterprise IT, cloud migrations, Salesforce customization, data engineering, analytics modeling, and conversational AI design. It’s equal parts pragmatic delivery and R&D: ship value quickly, then scale it elegantly.</p>
+          <p class="mt-3 text-gray-600 dark:text-gray-300">The following sections showcase hands-on technical work I’ve personally created and delivered from CRM development to conversational AI. These projects highlight a wide spectrum of technical capabilities I’ve worked with in real-world deployments and consulting engagements. Click through to explore initiatives that represent both depth and variety. This is a curated collection, part of a larger body of work, and it will continue to grow as I complete new projects. Check back often to see the latest additions.</p>
           <div class="mt-6 grid sm:grid-cols-2 gap-4">
             <a href="#crm" class="group border border-gray-200 dark:border-gray-700 rounded-2xl p-4 hover:border-blue-300 hover:shadow">
               <div class="font-semibold">CRM Development</div>
@@ -105,7 +108,7 @@
         </div>
         <aside class="bg-white dark:bg-gray-800 rounded-2xl border border-gray-200 dark:border-gray-700 p-6">
           <div class="text-sm uppercase tracking-wide text-gray-500 dark:text-gray-400">Callout</div>
-          <p class="mt-2 text-gray-700 dark:text-gray-300">All CRM admin capabilities are derived from real customer issues resolved for Salesforce consultancy clients. Requests are grouped by the <span class="font-semibold">functional capability</span> needed to deliver the solution.</p>
+          <p class="mt-2 text-gray-700 dark:text-gray-300">All CRM admin capabilities are derived from real customer issues resolved for Salesforce consultancy clients. Requests are grouped by the <span class="font-semibold">functional capability</span> needed to deliver the solution. <p> </p> All SAAS platforms listed and projects developed were mostly part of larger deployments and customer facing sales demonstrations and activities.</p>
         </aside>
       </div>
     </div>
@@ -414,7 +417,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center gap-3">
         <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-amber-500 text-white font-bold">DE</span>
-        <h2 class="text-3xl font-extrabold">Pentaho Data Integration & Analytics</h2>
+  <h2 class="text-3xl font-extrabold"><a class="text-inherit no-underline hover:underline" href="https://github.com/cruizeone1/PentahoProjects" target="_blank" rel="noopener noreferrer">Pentaho Data Integration & Analytics -Click Here for Github Repo-</a></h2><---
       </div>
       <p class="mt-2 text-gray-700 dark:text-gray-300">End-to-end demos: PDI (KTR/KJB), Kafka, Hive/Impala, Mondrian OLAP, CDE dashboards. Click to expand each project.</p>
 
@@ -601,8 +604,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center gap-3">
         <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-fuchsia-600 text-white font-bold">AI</span>
-  <h2 class="text-3xl font-extrabold"> <a href="https://github.com/cruizeone1/LivePersonGenAIBots" target="_blank" rel="noopener noreferrer"></a> Conversational AI Bot Design</h2></a>
-  <a class="text-blue-600 dark:text-blue-400 underline" href="https://github.com/cruizeone1/LivePersonGenAIBots" target="_blank" rel="noopener noreferrer">GitHub Repository Here</a>
+  <h2 class="text-3xl font-extrabold"><a class="text-inherit no-underline hover:underline" href="https://github.com/cruizeone1/LivePersonGenAIBots" target="_blank" rel="noopener noreferrer">Conversational AI Bot Design -Click Here for Github Repo-</a></h2><---
       </div>
       <p class="mt-2 text-gray-700 dark:text-gray-300">Multichannel assistants with intent design, secure API integrations, escalation paths, and analytics. Each bot below includes objective, impact, and key technical steps.</p>
 
@@ -765,13 +767,13 @@
           </ul>
         </article>
         <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Consultancy site" src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?q=80&w=1200&auto=format&fit=crop"/>
+          <img class="rounded-xl mb-4" alt="Consultancy site" src="/assets"/>
           <h3 class="text-xl font-bold">DLC Consultancy (2024) · dlcconsultancy.com</h3>
           <p class="mt-2 text-gray-700 dark:text-gray-300">WIX site with SEO, services pages, and lead capture.</p>
         </article>
         <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Drupal LMS" src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80&w=1200&auto=format&fit=crop"/>
-          <h3 class="text-xl font-bold">YMCA S. Florida Enablement Portal (2015)</h3>
+          <img class="rounded-xl mb-4" alt="Drupal LMS" src="/assets/images/drupal.png"/>
+          <h3 class="text-xl font-bold">YMCA South Palm Beach Florida Enablement Portal (2015)</h3>
           <p class="mt-2 text-gray-700 dark:text-gray-300">Drupal LMS on AWS: modules, media, roles/permissions, and maintenance.</p>
         </article>
       </div>
